[project]
name = "pytest-docker-network-fixtures"
version = "0.1.0"
description = "A Pytest based Docker testing library"
authors = [
    { name = "grainednoise", email = "grainednoise@gmail.com" },
    { name = "bvdbasch", email = "git@vanderbasch.com" }
]

keywords = ["docker", "pytest", "fixtures", "testing", "integration-testing"]

classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "docker>=7.0.0",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
    "pytest>=8.0.2",
    "pyyaml>=6.0.1",
]


readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
mongodb = [
    "pymongo>=4.0.0",
]
postgres = [
    "psycopg[binary]>=3.0",
]
mssql = [
    "pymssql>=2.2.0",
]
rabbitmq = [
    "amqp>=5.2.0"
]

[project.scripts]
delete_test_networks = "pytest_docker_network_fixtures.scripts.delete_test_networks:run"

[project.urls]
Homepage = "https://github.com/TOPdesk/pytest-docker-network-fixtures"
Documentation = "https://github.com/TOPdesk/pytest-docker-network-fixtures/documentation/source"
Repository = "https://github.com/TOPdesk/pytest-docker-network-fixtures"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pymongo>=4.0.0",
    "psycopg[binary]>=3.0",
    "pymssql>=2.2.0",
    "amqp>=5.2.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_docker_network_fixtures"]
